--- a/src/main/maindoc.fxml
+++ b/src/main/maindoc.fxml
@@ -34,7 +34,7 @@
             </Menu>
           <Menu mnemonicParsing="false" text="About">
             <items>
-              <MenuItem mnemonicParsing="false" text="About App" />
+              <MenuItem mnemonicParsing="false" onAction="#handleShowAbout" text="About App" />
             </items>
           </Menu>
         </menus>
