--- a/src/stegano/embeddingdoc.fxml
+++ b/src/stegano/embeddingdoc.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
@@ -58,6 +58,7 @@
                   <Button id="btnNext" fx:id="btnNext" alignment="BASELINE_LEFT" layoutX="828.0" layoutY="733.0" mnemonicParsing="false" onAction="#handleBtnNextExtraction" prefHeight="26.0" prefWidth="93.0" text="Next" />
                   <Text id="textInfoStegoImg" fx:id="textInfoStegoImg" layoutX="803.0" layoutY="508.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="225.7294921875" />
                   <Text id="textInfoCoverImg" fx:id="textInfoCoverImg" layoutX="796.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="199.7294921875" />
+                  <ProgressBar fx:id="progressBar" layoutX="322.0" layoutY="643.0" prefHeight="25.0" prefWidth="345.0" progress="0.0" visible="false" />
                </children>
             </AnchorPane>
          </children>
