--- a/src/stegano/embeddingdoc.fxml
+++ b/src/stegano/embeddingdoc.fxml
@@ -14,27 +14,27 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<ScrollPane id="scrolPaneEmbedding" fx:id="scrolPaneEmbedding" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="820.0" prefWidth="1148.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stegano.EmbeddingController">
+<ScrollPane id="scrolPaneEmbedding" fx:id="scrolPaneEmbedding" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="799.0" prefWidth="971.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stegano.EmbeddingController">
    <content>
-      <VBox prefHeight="809.0" prefWidth="1133.0">
+      <VBox prefHeight="795.0" prefWidth="966.0">
          <children>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="821.0">
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="809.0" prefWidth="1104.0">
                <children>
                   <Text fx:id="txtLabelMessage" fill="#5e5a5a" layoutX="22.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass=".text" text="Message Text :" />
                   <TextArea fx:id="textInputMessage" layoutX="22.0" layoutY="55.0" prefHeight="222.0" prefWidth="464.0" wrapText="true" />
-                  <Button fx:id="btnBrowseText" alignment="CENTER_RIGHT" contentDisplay="CENTER" layoutX="368.0" layoutY="27.0" mnemonicParsing="false" onAction="#handleBrowseFileText" prefHeight="25.0" prefWidth="73.0" text="Browse" textAlignment="CENTER">
+                  <Button fx:id="btnBrowseText" alignment="BASELINE_RIGHT" layoutX="359.0" layoutY="27.0" mnemonicParsing="false" onAction="#handleBrowseFileText" prefHeight="25.0" prefWidth="82.0" text="Browse" textAlignment="RIGHT">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
                   <Label layoutX="442.0" layoutY="33.0" text="(.txt)" />
-                  <Text fx:id="txtInfoMessage" layoutX="22.0" layoutY="290.0" stroke="#c3c1c1" strokeType="OUTSIDE" strokeWidth="0.0" text="Text Length : -" wrappingWidth="362.13671875" />
+                  <Text fx:id="txtInfoMessage" layoutX="22.0" layoutY="290.0" stroke="#c3c1c1" strokeType="OUTSIDE" strokeWidth="0.0" text="Text Length : " wrappingWidth="362.13671875" />
                   <Button fx:id="btnEncrypt" disable="true" layoutX="244.0" layoutY="337.0" mnemonicParsing="false" onAction="#handleBtnEncrypt" text="Encrypt" />
                   <Label layoutX="22.0" layoutY="320.0" text="Kunci : " />
                   <Text layoutX="22.0" layoutY="401.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass=".text" text="Chipertext :" />
-                  <Text fx:id="txtInfoChipertext" layoutX="22.0" layoutY="640.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chipertext Length : - " wrappingWidth="387.732421875" />
+                  <Text fx:id="txtInfoChipertext" layoutX="22.0" layoutY="640.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chipertext Length : " wrappingWidth="387.732421875" />
                   <TextField fx:id="txtInputPass" layoutX="22.0" layoutY="337.0" onKeyReleased="#handleInputPassword" prefHeight="25.0" prefWidth="203.0" />
-                  <Button fx:id="btnMainMenu" alignment="CENTER_RIGHT" layoutX="22.0" layoutY="720.0" mnemonicParsing="false" onAction="#handleBtnMainMenu" prefHeight="26.0" prefWidth="125.0" text="Main Menu" />
+                  <Button fx:id="btnMainMenu" alignment="CENTER_RIGHT" layoutX="22.0" layoutY="713.0" mnemonicParsing="false" onAction="#handleBtnMainMenu" prefHeight="26.0" prefWidth="98.0" text="Main Menu" />
                   <TextArea fx:id="textChiper" editable="false" layoutX="22.0" layoutY="405.0" prefHeight="222.0" prefWidth="466.0" wrapText="true" />
                   <Separator layoutX="495.0" layoutY="14.0" orientation="VERTICAL" prefHeight="699.0" prefWidth="0.0" />
                   <Text layoutX="508.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cover Image" />
@@ -44,7 +44,7 @@
                         <DropShadow color="#514f4f" height="22.49" radius="11.114999999999998" width="23.97" />
                      </effect>
                   </ImageView>
-                  <Label layoutX="766.0" layoutY="36.0" text="(.bmp)" />
+                  <Label layoutX="771.0" layoutY="36.0" text="(.bmp)" />
                   <Button fx:id="btnEmbedMessage" disable="true" layoutX="665.0" layoutY="285.0" mnemonicParsing="false" onAction="#handleBtnEmbedMessage" prefHeight="26.0" prefWidth="136.0" text="Embed Message" />
                   <Separator layoutX="497.0" layoutY="367.0" prefHeight="0.0" prefWidth="432.0" />
                   <Text layoutX="513.0" layoutY="390.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Stego Image" />
@@ -53,11 +53,10 @@
                         <DropShadow color="#514f4f" height="22.49" radius="11.114999999999998" width="23.97" />
                      </effect>
                   </ImageView>
-                  <Button id="btnSaveStegoImg" fx:id="btnSaveStegoImg" disable="true" layoutX="709.0" layoutY="629.0" mnemonicParsing="false" onAction="#handleBtnSaveStegoImg" text="Save" />
-                  <Label layoutX="759.0" layoutY="635.0" text="(.bmp)" />
-                  <Button id="btnNext" fx:id="btnNext" alignment="BASELINE_LEFT" layoutX="828.0" layoutY="733.0" mnemonicParsing="false" onAction="#handleBtnNextExtraction" prefHeight="26.0" prefWidth="93.0" text="Next" />
-                  <Text id="textInfoStegoImg" fx:id="textInfoStegoImg" layoutX="803.0" layoutY="508.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="225.7294921875" />
-                  <Text id="textInfoCoverImg" fx:id="textInfoCoverImg" layoutX="796.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="199.7294921875" />
+                  <Button id="btnSaveStegoImg" fx:id="btnSaveStegoImg" alignment="BASELINE_RIGHT" disable="true" layoutX="709.0" layoutY="629.0" mnemonicParsing="false" onAction="#handleBtnSaveStegoImg" prefHeight="25.0" prefWidth="72.0" text="Save" textAlignment="RIGHT" textOverrun="CLIP" />
+                  <Label layoutX="780.0" layoutY="635.0" text="(.bmp)" />
+                  <Button id="btnNext" fx:id="btnNext" alignment="BASELINE_LEFT" contentDisplay="RIGHT" layoutX="847.0" layoutY="713.0" mnemonicParsing="false" onAction="#handleBtnNextExtraction" prefHeight="26.0" prefWidth="67.0" text="Next" />
+                  <Text id="textInfoCoverImg" fx:id="textInfoCoverImg" layoutX="807.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="199.7294921875" />
                   <ProgressBar fx:id="progressBar" layoutX="322.0" layoutY="643.0" prefHeight="25.0" prefWidth="345.0" progress="0.0" visible="false" />
                </children>
             </AnchorPane>
