--- a/src/stegano/extractiondoc.fxml
+++ b/src/stegano/extractiondoc.fxml
@@ -2,41 +2,40 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.TextField?>
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="618.0" prefWidth="867.0" xmlns="http://javafx.com/javafx/8.0.45" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stegano.ExtractionController">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="618.0" prefWidth="867.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stegano.ExtractionController">
    <content>
       <VBox prefHeight="616.0" prefWidth="865.0">
          <children>
             <AnchorPane prefHeight="616.0" prefWidth="749.0">
                <children>
                   <Label layoutX="12.0" layoutY="17.0" text="Stego Image" />
-                  <Label layoutX="207.0" layoutY="15.0" text="(.bmp)" />
+                  <Label layoutX="240.0" layoutY="15.0" text="(.bmp)" />
                   <Label layoutX="13.0" layoutY="376.0" text="Kunci:" />
-                  <Button fx:id="btnBrowseStegoImg" layoutX="150.0" layoutY="8.0" mnemonicParsing="false" onAction="#handleBtnBrowse" text="Browse" />
+                  <Button fx:id="btnBrowseStegoImg" alignment="BASELINE_RIGHT" layoutX="150.0" layoutY="8.0" mnemonicParsing="false" onAction="#handleBtnBrowse" prefHeight="25.0" prefWidth="86.0" text="Browse" textAlignment="RIGHT" />
                   <Separator layoutX="14.0" layoutY="253.0" prefHeight="2.0" prefWidth="271.0" />
                   <Separator layoutX="315.0" layoutY="322.0" prefHeight="0.0" prefWidth="439.0" />
                   <Separator layoutX="9.0" layoutY="474.0" prefHeight="0.0" prefWidth="275.0" />
                   <Separator layoutX="296.0" layoutY="10.0" orientation="VERTICAL" prefHeight="552.0" prefWidth="0.0" />
                   <ImageView fx:id="imgViewStegoImg" fitHeight="214.0" fitWidth="270.0" layoutX="12.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true" />
-                  <TextField fx:id="txtInputPass" layoutX="13.0" layoutY="396.0" onKeyReleased="#handleInputPassword" onKeyPressed="#handleLengthInputPass" prefHeight="25.0" prefWidth="273.0" />
+                  <TextField fx:id="txtInputPass" layoutX="13.0" layoutY="396.0" onKeyPressed="#handleLengthInputPass" onKeyReleased="#handleInputPassword" prefHeight="25.0" prefWidth="273.0" />
                   <Button fx:id="btnExtract" disable="true" layoutX="183.0" layoutY="429.0" mnemonicParsing="false" onAction="#handleBtnExtraction" text="Extract Message" />
                   <TextArea fx:id="textAreaChiper" editable="false" layoutX="315.0" layoutY="33.0" prefHeight="271.0" prefWidth="504.0" wrapText="true" />
                   <Button fx:id="btnDecrypt" layoutX="761.0" layoutY="311.0" mnemonicParsing="false" onAction="#handleBtnDecrypt" text="Decrypt" />
-                  <Button layoutX="14.0" layoutY="575.0" mnemonicParsing="false" onAction="#handleMainMenu" text="Main Menu" />
+                  <Button fx:id="btnMainMenu" layoutX="14.0" layoutY="575.0" mnemonicParsing="false" onAction="#handleMainMenu" text="Main Menu" />
                   <Label layoutX="318.0" layoutY="15.0" text="ChiperText :" />
                   <Label fx:id="lblInfoStego" layoutX="12.0" layoutY="256.0" prefHeight="116.0" prefWidth="290.0" text="(Initial Image)" wrapText="true" />
                   <Label layoutX="317.0" layoutY="323.0" text="Text : " />
                   <TextArea fx:id="textAreaOri" editable="false" layoutX="315.0" layoutY="340.0" prefHeight="234.0" prefWidth="506.0" wrapText="true" />
-                  <Button fx:id="btnSaveText" layoutX="754.0" layoutY="575.0" mnemonicParsing="false" onAction="#handleBtnSaveText" text="Save" />
-                  <Label layoutX="795.0" layoutY="581.0" text="(.txt)" />
+                  <Button fx:id="btnSaveText" alignment="BASELINE_RIGHT" layoutX="723.0" layoutY="575.0" mnemonicParsing="false" onAction="#handleBtnSaveText" prefHeight="25.0" prefWidth="67.0" text="Save" textAlignment="RIGHT" />
+                  <Label layoutX="796.0" layoutY="581.0" text="(.txt)" />
                </children>
             </AnchorPane>
          </children>
