--- a/src/stegano/robustnessdoc.fxml
+++ b/src/stegano/robustnessdoc.fxml
@@ -17,8 +17,8 @@
             <AnchorPane prefHeight="790.0" prefWidth="1242.0">
                <children>
                   <Label layoutX="14.0" layoutY="14.0" text="Stego Image :" />
-                  <Button fx:id="btnBrowse" layoutX="94.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleBrowseStegoImg" prefHeight="25.0" prefWidth="74.0" text="Browse" />
-                  <Label layoutX="168.0" layoutY="18.0" text="(.bmp)" />
+                  <Button fx:id="btnBrowse" alignment="BASELINE_RIGHT" layoutX="94.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleBrowseStegoImg" prefHeight="25.0" prefWidth="86.0" text="Browse" textAlignment="RIGHT" />
+                  <Label layoutX="184.0" layoutY="16.0" text="(.bmp)" />
                   <Separator layoutX="251.0" layoutY="10.0" orientation="VERTICAL" prefHeight="361.0" prefWidth="0.0" />
                   <ImageView fx:id="imgViewStego" fitHeight="223.0" fitWidth="244.0" layoutX="4.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true" />
                   <Label fx:id="lblInfoImgStego" layoutX="14.0" layoutY="273.0" prefHeight="100.0" prefWidth="234.0" text="( image information ... )" wrapText="true" />
@@ -29,28 +29,28 @@
                   <Separator layoutX="530.0" layoutY="10.0" orientation="VERTICAL" prefHeight="361.0" prefWidth="0.0" />
                   <Label layoutX="257.0" layoutY="10.0" text="Stego Image (With Noise)" />
                   <ImageView fx:id="imgViewStegoNoise" fitHeight="234.0" fitWidth="267.0" layoutX="260.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
-                  <Button fx:id="btnInitExtractMsg" onAction="#handleInitExtractMsg" disable="true" layoutX="260.0" layoutY="280.0" mnemonicParsing="false" text="Extract Message ?" />
+                  <Button fx:id="btnInitExtractMsg" disable="true" layoutX="260.0" layoutY="280.0" mnemonicParsing="false" onAction="#handleInitExtractMsg" text="Extract Message ?" />
                   <Button fx:id="btnMainMenu" layoutX="12.0" layoutY="743.0" mnemonicParsing="false" onAction="#handleBtnMainMenu" text="Main Menu" />
                   <Separator layoutX="14.0" layoutY="372.0" prefHeight="0.0" prefWidth="238.0" />
                   <VBox fx:id="vboxpaneExtraction" layoutX="540.0" layoutY="9.0" prefHeight="725.0" prefWidth="665.0" style="-fx-background-color: #f9f9f9;">
                      <children>
-                        <AnchorPane fx:id="anchorPaneExtraction" prefHeight="727.0" prefWidth="665.0" disable="true">
+                        <AnchorPane fx:id="anchorPaneExtraction" disable="true" prefHeight="727.0" prefWidth="665.0">
                            <children>
                               <Label layoutX="8.0" layoutY="5.0" text="Kunci:" />
-                              <TextField fx:id="txtfieldKunci" onKeyReleased="#handleInputPassword" layoutX="8.0" layoutY="22.0" prefHeight="25.0" prefWidth="209.0" />
-                              <Button fx:id="btnExtractDecrypt" onAction="#handleExtractDecrypt" layoutX="228.0" layoutY="22.0" mnemonicParsing="false" text="Extract &amp; Decrypt" />
+                              <TextField fx:id="txtfieldKunci" layoutX="8.0" layoutY="22.0" onKeyReleased="#handleInputPassword" prefHeight="25.0" prefWidth="209.0" />
+                              <Button fx:id="btnExtractDecrypt" layoutX="228.0" layoutY="22.0" mnemonicParsing="false" onAction="#handleExtractDecrypt" text="Extract &amp; Decrypt" />
                               <TextArea fx:id="txtareaOriMsg" editable="false" layoutX="13.0" layoutY="359.0" prefHeight="224.0" prefWidth="475.0" wrapText="true" />
                               <Label layoutX="10.0" layoutY="60.0" text="Message from Extraction :" />
                               <Separator layoutX="8.0" layoutY="53.0" prefHeight="0.0" prefWidth="475.0" />
                               <TextArea fx:id="txtareaTest" layoutX="9.0" layoutY="81.0" prefHeight="200.0" prefWidth="478.0" wrapText="true" />
                               <Label layoutX="14.0" layoutY="305.0" text="Browse original message file to compare extraction message" />
-                              <Button fx:id="btnBrowseTxt" onAction="#handleBrowseTxtOri" layoutX="14.0" layoutY="324.0" mnemonicParsing="false" text="Browse" />
-                              <Label layoutX="69.0" layoutY="330.0" text="(.txt)" />
-                              <Button fx:id="btnCompare" onAction="#handleBtnCompare" layoutX="13.0" layoutY="586.0" mnemonicParsing="false" text="Compare" />
+                              <Button fx:id="btnBrowseTxt" alignment="BASELINE_RIGHT" layoutX="14.0" layoutY="324.0" mnemonicParsing="false" onAction="#handleBrowseTxtOri" prefHeight="25.0" prefWidth="74.0" text="Browse" />
+                              <Label layoutX="91.0" layoutY="330.0" text="(.txt)" />
+                              <Button fx:id="btnCompare" layoutX="13.0" layoutY="586.0" mnemonicParsing="false" onAction="#handleBtnCompare" text="Compare" />
                               <Label layoutX="15.0" layoutY="632.0" text="Percentage result (%) :" />
                               <TextField fx:id="txtfieldCompareResult" editable="false" layoutX="143.0" layoutY="626.0" prefHeight="31.0" prefWidth="119.0" />
                               <Label layoutX="15.0" layoutY="677.0" text="Save data to Database? " />
-                              <Button fx:id="btnSaveRobustness" onAction="#handleSaveDataRobustness" layoutX="148.0" layoutY="673.0" mnemonicParsing="false" text="Save" />
+                              <Button fx:id="btnSaveRobustness" layoutX="148.0" layoutY="673.0" mnemonicParsing="false" onAction="#handleSaveDataRobustness" text="Save" />
                            </children>
                         </AnchorPane>
                      </children>
