--- a/src/stegano/embeddingdoc.fxml
+++ b/src/stegano/embeddingdoc.fxml
@@ -93,7 +93,7 @@
                   <Text id="textInfoCoverImg" fx:id="textInfoCoverImg" layoutX="807.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="199.7294921875" />
                   <ProgressBar fx:id="progressBar" layoutX="310.0" layoutY="643.0" prefHeight="18.0" prefWidth="370.0" progress="0.0" visible="false" />
                   <Separator layoutX="498.0" layoutY="319.0" prefHeight="3.0" prefWidth="430.0" />
-                  <Label layoutX="591.0" layoutY="335.0" text="Process Time : ">
+                  <Label alignment="CENTER" layoutX="580.0" layoutY="336.0" prefHeight="20.0" prefWidth="100.0" text="Time Execution" textAlignment="CENTER">
                      <font>
                         <Font size="14.0" />
                      </font>
